feat: generate portable OpenAPI constraints
